# AI-trainer

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: public-datasets.md
scripts/: install-python3.11.sh  install-uv-python3.11.sh  setup-environment.sh
siin_trainer/: __init__.py  cli.py
siin_trainer/datasets/: convert.py  download.py  extract_images.py  filter.py  merge.py  split.py  visualize.py
siin_trainer/models/: train_rfdetr.py  train_ultralytics.py
tests/: run-tests.sh
tests/dataset1/: data.yaml  test.txt  train.txt  val.txt
tests/dataset2/: data.yaml
